--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.9",
     "@tanstack/react-query": "^5.90.11",
+    "@types/react-transition-group": "^4.4.12",
     "bootstrap": "^5.3.8",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-transition-group": "^4.4.5",
     "viem": "^2.40.3",
     "wagmi": "^2.19.5"
   },
